get all users and delete user
